# jobs-at

./: .env.example  .envrc  .gitignore  Dockerfile  README.md  build_site_data.py  devenv.nix  docker-compose.yml  headcounts.json  make_csv.py  nginx.conf  occupations.csv  occupations.json  parse_detail.py  parse_occupations.py  process.py  pyproject.toml  score.py  score_headcount.py  scores.json  scrape.py
.github/workflows/: docker.yml
site/: data.json  index.html
