[project]
name = "jobs-at"
version = "0.1.0"
description = "KI-Exposition des österreichischen Arbeitsmarkts / AI Exposure of the Austrian Job Market"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx[http2]>=0.28.1",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
]
